--- a/apps/operators1/src/app/app.component.html
+++ b/apps/operators1/src/app/app.component.html
@@ -6,6 +6,7 @@
 <h3>Scan</h3>
 
 <button type="button" routerLink="/scan">Sum over time</button>
+<button type="button" routerLink="/scan/accumulate-object">Accumulate object</button>
 
 
 <br>
