Add code preview

--- a/libs/scan/src/lib/accumulate-object/accumulate-object.component.html
+++ b/libs/scan/src/lib/accumulate-object/accumulate-object.component.html
@@ -12,3 +12,7 @@
 <p>Accumulated object: {{example$ | async | json}}</p>
 
 <button type="button" (click)="addObject()">start</button>
+
+<pre>
+  <code [innerHTML]="code"></code>
+</pre>
