--- a/libs/scan/src/lib/sum-over-time/sum-over-time.component.html
+++ b/libs/scan/src/lib/sum-over-time/sum-over-time.component.html
@@ -2,3 +2,7 @@
 <p>Sum over time: {{example$ | async}}</p>
 
 <button type="button" (click)="start()">start</button>
+
+<pre>
+  <code [innerHTML]="code"></code>
+</pre>
