--- a/apps/operators1/src/app/app.component.html
+++ b/apps/operators1/src/app/app.component.html
@@ -3,7 +3,7 @@
 </header>
 
 <br>
-<h3>Scan operator</h3>
+<h3>Scan operator <small><pre><code>scan(accumulator: function, seed: any): Observable</code></pre></small></h3>
 
 <button type="button" routerLink="/scan">Sum over time</button>
 <button type="button" routerLink="/scan/accumulate-object">Accumulate object</button>
