--- a/libs/scan/src/lib/accumulate-object/accumulate-object.component.html
+++ b/libs/scan/src/lib/accumulate-object/accumulate-object.component.html
@@ -11,7 +11,7 @@
 
 <p>Accumulated object: {{example$ | async | json}}</p>
 
-<button type="button" (click)="addObject()">start</button>
+<button type="button" (click)="addObject()">Accumulate</button>
 
 <pre>
   <code [innerHTML]="code"></code>
