--- a/libs/scan/src/lib/sum-over-time/sum-over-time.component.html
+++ b/libs/scan/src/lib/sum-over-time/sum-over-time.component.html
@@ -1,7 +1,7 @@
 <p> 0 + 1 + 2 + 3 + 4 ...</p>
 <p>Sum over time: {{example$ | async}}</p>
 
-<button type="button" (click)="start()">start</button>
+<button type="button" (click)="start()">Start</button>
 
 <pre>
   <code [innerHTML]="code"></code>
