--- a/apps/operators1/src/app/app.component.html
+++ b/apps/operators1/src/app/app.component.html
@@ -8,6 +8,12 @@
 <button type="button" routerLink="/scan">Sum over time</button>
 <button type="button" routerLink="/scan/accumulate-object">Accumulate object</button>
 
+<br>
+<h3>Tap operator <small><pre><code>tap(next: function): Observable</code></pre></small></h3>
+
+<button type="button" routerLink="/tap/logging">Logging</button>
+<button type="button" routerLink="/tap/when">When</button>
+
 
 <br>
 <br>
