--- a/apps/pipeable/src/app/app.component.html
+++ b/apps/pipeable/src/app/app.component.html
@@ -1,4 +1,4 @@
-
+<operators-header [title]="title"></operators-header>
 <br>
 <h3>Scan operator <small><pre><code>scan(accumulator: function, seed: any): Observable</code></pre></small></h3>
 
