--- a/libs/pure-ui/src/lib/header/header.component.html
+++ b/libs/pure-ui/src/lib/header/header.component.html
@@ -1,3 +1,5 @@
-<header class="flex">
-    <h1>{{ title }}!</h1>
-  </header>
+<header class="flex justify-content-">
+  <img src="https://static.skaip.org/img/emoticons/180x180/f6fcff/monkey.gif">
+  <h1>{{ title }}</h1>
+  <img src="https://static.skaip.org/img/emoticons/180x180/f6fcff/monkey.gif">
+</header>
