--- a/apps/creators/src/styles.scss
+++ b/apps/creators/src/styles.scss
@@ -124,3 +124,6 @@ summary {
 pre {
   background-color: lightgrey;
 }
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
