--- a/libs/pure-ui/src/lib/header/header.component.html
+++ b/libs/pure-ui/src/lib/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="flex justify-content-">
+<header class="flex justify-content-between">
   <img src="https://static.skaip.org/img/emoticons/180x180/f6fcff/monkey.gif">
   <h1>{{ title }}</h1>
   <img src="https://static.skaip.org/img/emoticons/180x180/f6fcff/monkey.gif">
