--- a/libs/pure-ui/src/lib/header/header.component.html
+++ b/libs/pure-ui/src/lib/header/header.component.html
@@ -1,5 +1,3 @@
-<header class="flex justify-content-between">
-  <img src="https://static.skaip.org/img/emoticons/180x180/f6fcff/monkey.gif">
-  <h1>{{ title }}</h1>
-  <img src="https://static.skaip.org/img/emoticons/180x180/f6fcff/monkey.gif">
+<header class="d-flex justify-content-center">
+  <h2 class="mx-0 align-self-center">{{ title }}</h2>
 </header>
