Import interval module

--- a/apps/creators/src/app/app.component.html
+++ b/apps/creators/src/app/app.component.html
@@ -1,1 +1,10 @@
 <operators-header [title]="title"></operators-header>
+<br>
+<h4>interval <small><pre><code>interval(period: number, scheduler: Scheduler): Observable</code></pre></small></h4>
+
+<button type="button" routerLink="/interval">Every second</button>
+
+<br>
+<br>
+
+<router-outlet></router-outlet>
