--- a/libs/pure-ui/src/lib/header/header.component.html
+++ b/libs/pure-ui/src/lib/header/header.component.html
@@ -1,3 +1,5 @@
-<header class="d-flex justify-content-center">
+<header class="d-flex justify-content-around">
+  <img class="monkey">
   <h2 class="mx-0 align-self-center">{{ title }}</h2>
+  <img class="monkey">
 </header>
